--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color:#333;
+    color: blue;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -12,7 +12,7 @@ body
 {
     background: #33A;
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0,5);
-    color: : white;
+    color:  white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
